--- a/MT.html
+++ b/MT.html
@@ -1,6 +1,7 @@
 <html>
 <head>
  <title>Mother Teresa Tribute Page</title>
+ <link rel=" stylesheet" href="C:\Users\tkin\OneDrive\Documents\Project\css\style.css" />
  <style>
  body{
 	margin-top: 60px;
